Postman updated CourseRegistrationEAFinalProject

--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -455,7 +455,7 @@
                 "header": [],
                 "body": {
                   "mode": "raw",
-                  "raw": "{\n    \"userId\": 3,\n    \"name\": \"Payman Slek\",\n    \"email\": \"pslek@miu.edu\"\n}",
+                  "raw": "{\n    \"userId\": 3,\n    \"name\": \"Payman Slek\",\n    \"email\": \"pslek@miu.edu\",\n    \"title\": \"Software Architect Lead\"\n}",
                   "options": {
                     "raw": {
                       "language": "json"
@@ -504,12 +504,12 @@
   ],
   "variable": [
     {
-      "id": "f00106c6-683a-4112-be06-27c6dc34a8b1",
+      "id": "78391d3e-9a73-4c0c-b31a-c70b5d783366",
       "key": "baseURL",
       "value": "localhost"
     },
     {
-      "id": "8d4527f8-45b0-4382-a304-9017bf8019e3",
+      "id": "4e3053cd-163b-48f8-9289-83470ca18957",
       "key": "port",
       "value": "8010"
     }
