Add Course Offering

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,22 +1,13 @@
 server:
   port: 8010
-
-  error:
-    include-message: always
-    include-binding-errors: always
-    include-stacktrace: never
-    include-exception: false
-
+countrystatecity:
+  forceUpdate: false
 spring:
+  application:
+    name: EA Final Project (Dev)
   datasource:
-    url: 'jdbc:postgresql://localhost:5432/cs544'
-    username: 'root'
-    password: 'CS544-EA'
-    driver-class-name: org.postgresql.Driver
-    hikari:
-      maximum-pool-size: 5
-
+    url: jdbc:mysql://localhost:3306/cs544
+    username: root
+    password: P@ssw0rd
   jpa:
     show-sql: true
-    hibernate:
-      ddl-auto: create-drop
