Postman updated CourseRegistrationEAFinalProject

--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -467,7 +467,7 @@
               "response": [
                 {
                   "id": "82efb2ef-5637-4344-a8d7-9fae27e4dd2e",
-                  "name": "Faculty Registration",
+                  "name": "Success",
                   "originalRequest": {
                     "method": "POST",
                     "header": [],
@@ -539,6 +539,11 @@
             }
           ],
           "id": "6b87a4b7-5a91-4018-92e3-9e08f8fcd918"
+        },
+        {
+          "name": "New Folder",
+          "item": [],
+          "id": "e9a60b65-a4c4-423d-978f-88cd55faf4f5"
         }
       ],
       "id": "4fe13d3f-00fe-4ef8-a3a8-2ab339b66c47",
@@ -575,12 +580,12 @@
   ],
   "variable": [
     {
-      "id": "787d81c1-1ab4-441e-8917-a04bdca534f6",
+      "id": "d1666180-64aa-440e-b11d-6e86f0d90726",
       "key": "baseURL",
       "value": "localhost"
     },
     {
-      "id": "a963fbb7-9350-4136-a9e5-0400da7c19a4",
+      "id": "6a2a9dbd-b2e6-4f9d-b133-49e2705c96ac",
       "key": "port",
       "value": "8010"
     }
