Postman updated CourseRegistrationEAFinalProject

--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -541,7 +541,7 @@
           "id": "6b87a4b7-5a91-4018-92e3-9e08f8fcd918"
         },
         {
-          "name": "New Folder",
+          "name": "Academic Block",
           "item": [],
           "id": "e9a60b65-a4c4-423d-978f-88cd55faf4f5"
         }
@@ -580,12 +580,12 @@
   ],
   "variable": [
     {
-      "id": "ab42721c-d44a-43ec-8a3d-ec97444cf02e",
+      "id": "3409aa47-02c8-441d-a737-b765a7855009",
       "key": "baseURL",
       "value": "localhost"
     },
     {
-      "id": "434b0119-0925-412d-99c9-aef225f89097",
+      "id": "ae4b3648-ad40-4a6b-becf-02fdb2c4c9a0",
       "key": "port",
       "value": "8010"
     }
