Postman updated CourseRegistrationEAFinalProject

--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -550,8 +550,17 @@
                 "disableBodyPruning": true
               },
               "request": {
-                "method": "GET",
+                "method": "POST",
                 "header": [],
+                "body": {
+                  "mode": "raw",
+                  "raw": "{\n    \"name\": \"December 2012\",\n    \"semester\": \"WINTER\",\n    \"startDate\": \"2012-12-01\",\n    \"endDate\": \"2012-12-28\"\n}",
+                  "options": {
+                    "raw": {
+                      "language": "json"
+                    }
+                  }
+                },
                 "url": "http://{{baseURL}}:{{port}}/academic-blocks"
               },
               "response": []
@@ -594,12 +603,12 @@
   ],
   "variable": [
     {
-      "id": "1fb4d77a-d4e1-400e-a6aa-f6c3242a932c",
+      "id": "71a8a5e0-5a74-448b-b4d3-2278eb91dcc2",
       "key": "baseURL",
       "value": "localhost"
     },
     {
-      "id": "87442463-35d5-415a-a830-a135aae73268",
+      "id": "c6f5ac43-2238-475d-b8dd-bcc312e137b3",
       "key": "port",
       "value": "8010"
     }
