--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -441,6 +441,72 @@
                   "cookie": [],
                   "responseTime": null,
                   "body": "{\n    \"userId\": 1,\n    \"studentId\": \"645532\",\n    \"name\": \"Min Phone Nyunt Win\",\n    \"email\": \"mwin@miu.edu\"\n}"
+                },
+                {
+                  "id": "bc5c2827-fb89-44d6-aebf-4e98a9f0b7b1",
+                  "name": "Student Registration",
+                  "originalRequest": {
+                    "method": "POST",
+                    "header": [],
+                    "body": {
+                      "mode": "raw",
+                      "raw": "{\n    \"userId\": 1,\n    \"studentId\": \"645532\",\n    \"name\": \"Min Phone Nyunt Win\",\n    \"email\": \"mwin@miu.edu\"\n}",
+                      "options": {
+                        "raw": {
+                          "language": "json"
+                        }
+                      }
+                    },
+                    "url": "http://{{baseURL}}:{{port}}/admins/students"
+                  },
+                  "status": "Bad Request",
+                  "code": 400,
+                  "_postman_previewlanguage": "json",
+                  "header": [
+                    {
+                      "key": "X-Content-Type-Options",
+                      "value": "nosniff"
+                    },
+                    {
+                      "key": "X-XSS-Protection",
+                      "value": "1; mode=block"
+                    },
+                    {
+                      "key": "Cache-Control",
+                      "value": "no-cache, no-store, max-age=0, must-revalidate"
+                    },
+                    {
+                      "key": "Pragma",
+                      "value": "no-cache"
+                    },
+                    {
+                      "key": "Expires",
+                      "value": "0"
+                    },
+                    {
+                      "key": "X-Frame-Options",
+                      "value": "DENY"
+                    },
+                    {
+                      "key": "Content-Type",
+                      "value": "application/json"
+                    },
+                    {
+                      "key": "Transfer-Encoding",
+                      "value": "chunked"
+                    },
+                    {
+                      "key": "Date",
+                      "value": "Wed, 15 Dec 2021 07:55:07 GMT"
+                    },
+                    {
+                      "key": "Connection",
+                      "value": "close"
+                    }
+                  ],
+                  "cookie": [],
+                  "responseTime": null,
+                  "body": "{\n    \"statusCode\": 400,\n    \"timestamp\": \"2021-12-15T01:55:07.48881\",\n    \"message\": \"Something is wrong\"\n}"
                 }
               ]
             },
@@ -566,7 +632,7 @@
               "response": [
                 {
                   "id": "55620612-18a0-4187-9226-9249fd6d1715",
-                  "name": "Save Academic Block",
+                  "name": "Success",
                   "originalRequest": {
                     "method": "POST",
                     "header": [],
@@ -674,12 +740,12 @@
   ],
   "variable": [
     {
-      "id": "61901f63-107c-481d-83f6-9e661e4ff2eb",
+      "id": "d24b7e18-73a0-4920-9ecb-effd31797428",
       "key": "baseURL",
       "value": "localhost"
     },
     {
-      "id": "89cf3e3c-3476-4ec9-803f-349ca561852e",
+      "id": "fce4935a-3402-4d6e-bf71-e9e23e3e38d2",
       "key": "port",
       "value": "8010"
     }
