Postman updated CourseRegistrationEAFinalProject

--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -634,6 +634,11 @@
             }
           ],
           "id": "e9a60b65-a4c4-423d-978f-88cd55faf4f5"
+        },
+        {
+          "name": "New Folder",
+          "item": [],
+          "id": "23007f36-cd57-4c5c-b4c6-db0ed59669f5"
         }
       ],
       "id": "4fe13d3f-00fe-4ef8-a3a8-2ab339b66c47",
@@ -670,12 +675,12 @@
   ],
   "variable": [
     {
-      "id": "8b01050b-4de4-4379-896b-bb6ba10a7f8e",
+      "id": "12c37181-7e31-4685-aa25-b98e9d9efd3d",
       "key": "baseURL",
       "value": "localhost"
     },
     {
-      "id": "d28e8a2a-bfa6-4cda-af42-4b1d83a95818",
+      "id": "676a0e90-39b4-480f-849e-2a7d43a29dbf",
       "key": "port",
       "value": "8010"
     }
