Postman updated CourseRegistrationEAFinalProject

--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -636,7 +636,7 @@
           "id": "e9a60b65-a4c4-423d-978f-88cd55faf4f5"
         },
         {
-          "name": "New Folder",
+          "name": "Address",
           "item": [],
           "id": "23007f36-cd57-4c5c-b4c6-db0ed59669f5"
         }
@@ -675,12 +675,12 @@
   ],
   "variable": [
     {
-      "id": "928840e0-d6c9-4e5c-ab9a-ff3f69af8626",
+      "id": "77b7550d-9225-4822-b2d5-e9b7eda81a12",
       "key": "baseURL",
       "value": "localhost"
     },
     {
-      "id": "caf63364-fc55-4c9f-b1f4-fae7419bc249",
+      "id": "515878c9-02ad-4cbf-a5f8-2fa75447f2fa",
       "key": "port",
       "value": "8010"
     }
