Postman updated CourseRegistrationEAFinalProject

--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -639,7 +639,7 @@
           "name": "Address",
           "item": [
             {
-              "name": "New Request",
+              "name": "Save Address",
               "id": "1e0a4930-241c-4ae0-a877-74ff072988dc",
               "protocolProfileBehavior": {
                 "disableBodyPruning": true
@@ -689,12 +689,12 @@
   ],
   "variable": [
     {
-      "id": "1a586fc0-b5e9-484f-9f6d-cd3165d74c85",
+      "id": "f8d4da70-825c-48c9-91ae-2018bd75791a",
       "key": "baseURL",
       "value": "localhost"
     },
     {
-      "id": "9c735072-7380-4bca-a0c3-0195518bbfb2",
+      "id": "bb2fd03f-8445-456a-ae3f-56e86d9f891b",
       "key": "port",
       "value": "8010"
     }
